Wed Dec 28 11:22:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#entries): use utility method
	  instead of typoed regexp.  [ruby-core:41829] [Bug #5817]

Fri Jul  1 06:41:36 2011  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_check_signal): only wake up main thread.

	* thread.c (rb_threadptr_execute_interrupts_common): check signal
	  deliverly if it is main thread.
	  fixes [ruby-dev:44005] [Ruby 1.9 - Bug #4950]

	* bootstraptest/test_fork.rb: add a test for above.

	* signal.c (rb_get_next_signal): skip if signal_buff is empty.
	 (check signal_buff.size first)

	* vm_core.h: remove unused variable rb_thread_t::exec_signal.

	* thread.c (rb_thread_check_trap_pending): check
	  rb_signal_buff_size() because rb_thread_t::exec_signal
	  is no longer available.

Fri Jul  1 03:28:25 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (Init_class_hierarchy): should name BasicObject
	  explicitly.

	* variable.c (rb_const_defined_0): should not check for
	  superclasses as const_get.

Thu Jun 30 22:17:04 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_bmethod): fix to hook call/return event
	  for methods defined by define_method(). fixes Bug #4613.

	* thread.c (call_trace_proc): Fix to skip if class is not given (0).
	  Note that ID and Class object are passed for call/return event
	  if the called method was defined by define_method().
	  If you are author of tracer/profiler/debugger, this may be an
	  important change.  You should check passed class as zero or
	  non-zero instead of checking the event type.

	* test/ruby/test_settracefunc.rb: add a test for above.

Thu Jun 30 21:18:35 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: Add warnflags for XL/C on AIX during configure
	  to avoid [Bug #3971]. See [ruby-core:32859]

Thu Jun 30 20:12:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_module.rb: tests for [Bug #3422] and [Bug #3423].
