@@ -6,10 +6,17 @@ class TestOptionParser < Test::Unit::TestCase
     @opt = OptionParser.new
     @flag = self.class		# cannot set by option
   end
+
+  class DummyOutput < String
+    alias write <<
+  end
   def no_error(*args)
+    $stderr, stderr = DummyOutput.new, $stderr
     assert_nothing_raised(*args) {return yield}
   ensure
+    stderr, $stderr = $stderr, stderr
     $!.backtrace.delete_if {|e| /\A#{Regexp.quote(__FILE__)}:#{__LINE__-2}/o =~ e} if $!
+    assert_empty(stderr)
   end
 
   def test_permute
@@ -44,5 +51,15 @@ class TestOptionParser < Test::Unit::TestCase
     assert_equal(self.class, @flag)
     assert_equal(%w"foo -- --help bar", no_error {@opt.order!(%w"foo -- --help bar")})
     assert_equal(self.class, @flag)
+  end
+
+  def test_regexp
+    return unless defined?(@reopt)
+    assert_equal(%w"", no_error {@opt.parse!(%w"--regexp=/foo/")})
+    assert_equal(/foo/, @reopt)
+    assert_equal(%w"", no_error {@opt.parse!(%w"--regexp=/foo/i")})
+    assert_equal(/foo/i, @reopt)
+    assert_equal(%w"", no_error {@opt.parse!(%w"--regexp=/foo/n")})
+    assert_equal(/foo/n, @reopt)
   end
 end
